--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,20 @@
   <body>
     <header class="header">
       <div class="header__wrap">
-        <div class="lawyer">
-          <p class="lawyer__name">Адвокатский кабинет Якубов Рашад Киязович</p>
-          <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
-          <div class="lawyer__contacts">
-            <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ 'Графит' 2 этаж, офис 28</p>
-            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
-          </div>
+        <div class="lawyer lawyer--undefined">
+          <p class="lawyer__name">Адвокатский кабинет Якубов Рашад Киязович
+            <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
+            <div class="lawyer__contacts">
+              <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</p>
+              <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
+            </div>
+          </p>
         </div>
       </div>
       <button class="nav-toggle" aria-label="Переключатель открыть/закрыть меню"><span></span></button>
       <nav class="main-nav">
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current">Главная</li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">Главная</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="#">Услуги адвоката</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="#">Практика</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
@@ -39,32 +40,33 @@
         <aside class="sidebar">
           <nav class="service-menu">
             <div class="service-menu__wrapper">
-              <div class="service-menu__name">Услуги</div>
-              <ul class="service-menu__list">
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Недвижимость</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Земельные споры</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Выселение</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Защита прав дольщиков</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Признание прав собственности</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Корпоративные споры</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Семейные дела</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Развод и раздел имущества супругов</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Наследство</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Восстановление срока принятия наследства</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Оспаривание завещания</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Защита интеллектуальной собственности</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Авторские права наследников</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Нарушение авторских прав</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Трудовые споры</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Споры со страховыми</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Административные дела</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Банкротство</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Гражданские дела</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Защита прав потребителей</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Признание договора недействительным</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Составление искового заявления</a></li>
-                <li class="service-menu__item"><a class="service-menu__link" href="#">Юридическая консультация</a></li>
-              </ul>
+              <div class="service-menu__name">Услуги
+                <ul class="service-menu__list">
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Недвижимость</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Земельные споры</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Выселение</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Защита прав дольщиков</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Признание прав собственности</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Корпоративные споры</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Семейные дела</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Развод и раздел имущества супругов</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Наследство</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Восстановление срока принятия наследства</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Оспаривание завещания</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Защита интеллектуальной собственности</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Авторские права наследников</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Нарушение авторских прав</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Трудовые споры</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Споры со страховыми</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Административные дела</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Банкротство</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Гражданские дела</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Защита прав потребителей</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Признание договора недействительным</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Составление искового заявления</a></li>
+                  <li class="service-menu__item"><a class="service-menu__link" href="#">Юридическая консультация</a></li>
+                </ul>
+              </div>
             </div>
           </nav>
           <section class="latest-articles">
@@ -81,7 +83,7 @@
                 </li>
                 <li class="latest-article__item">
                   <p class="latest-article__name-article">Что изменилось в правилах регистрации недвижимости</p>
-                  <p class="latest-article__annotation-article">С 01.01.2017 в сфере недвижимости действует новый закон 'О государственной регистрации недвижимости'</p><a class="latest-article__link-article" href="#">Подробнее</a>
+                  <p class="latest-article__annotation-article">С 01.01.2017 в сфере недвижимости действует новый закон 'О государственной регистрации недвижимости'</p><a class="latest-article__link" href="#">Подробнее</a>
                 </li>
               </ul><a class="latest-article__link" href="#">Все статьи</a>
             </div>
@@ -95,13 +97,17 @@
             <p>Также я работаю в сфере договорного права: разрабатываю проекты договоров, осуществляю юридическое сопровождение сделок, участвую в согласовании договорных условий, даю заключения по договорам.</p>
             <p>По роду деятельности я регулярно участвую в судебных заседаниях районных судов города Санкт-Петербург, Санкт-Петербургском городском и областном судах, Арбитражном суде города Санкт-Петербург, Арбитражном суде Ленинградской области, 9 и 10 арбитражных апелляционных судах, арбитражном суде.</p>
             <h2>Юридическая помощь</h2>
-            <div class="advantages">
+            <section class="advantages">
+              <h3 class="visually-hidden">Преимущества</h3>
               <ul class="advantages__list">
-                <li class="advantages__item"><img class="advantages__icon" src="img/content/legal-hammer.svg" alt="Судейский молоток" width="60" height="60"><span>Участие в судах</span></li>
-                <li class="advantages__item"><img class="advantages__icon" src="img/content/wallet-filled-money-tool.svg" alt="Кошелек" width="62" height="60"><span>Разумные цены</span></li>
-                <li class="advantages__item"><img class="advantages__icon" src="img/content/clock.svg" alt="Часы" width="60" height="60"><span>Пунктуальность</span></li>
+                <li class="advantages__item"><img class="advantages__icon" src="img/content/legal-hammer.svg" alt="Судейский молоток" width="60" height="60">Участие в судах
+                </li>
+                <li class="advantages__item"><img class="advantages__icon" src="img/content/wallet-filled-money-tool.svg" alt="Кошелек" width="62" height="60">Разумные цены
+                </li>
+                <li class="advantages__item"><img class="advantages__icon" src="img/content/clock.svg" alt="Часы" width="60" height="60">Пунктуальность
+                </li>
               </ul>
-            </div>
+            </section>
             <p>Каждый человек имеет интересы, права, которые необходимо защищать. В ряде случаев для этого необходима помощь специалиста в области права, адвоката.</p>
             <p>Особенно важно привлечь к участию в деле юриста, когда цена ошибки очень высока.</p>
             <p>Чтобы защитить свои права, нужно как минимум знать закон. Но чтобы суд принял нужное Вам решение, этого знания мало. Нужно знать, как суд понимает закон, какие обстоятельства для него важны при разрешении спора.</p>
@@ -110,7 +116,7 @@
             <p>Отношения адвоката и его клиента особые, недаром последний называется Доверителем. Эти отношения носят доверительный характер. Человек, обратившийся за помощью к адвокату, должен ему доверять.</p>
             <p>Условиями такого доверия, как сказано в Кодексе профессиональной этики адвоката, являются профессиональная независимость адвоката, убежденность доверителя в порядочности, честности и добросовестности адвоката.</p>
             <p>Оказание юридической помощи, представление интересов в суде должны быть не только профессией, но и любимым делом. Только в этом случае возможны профессиональный рост и развитие, подлинная компетентность.</p>
-            <blockquote>'Дела бывают разные, простые и сложные, верные и безнадежные. Если шансы на успех малы – я скажу Вам об этом в самом начале. Я не буду давать Вам обещаний, которых не смогу выполнить.'<img src="img/content/balance.svg" alt="Весы правосудия" width="100" height="100"></blockquote>
+            <blockquote>"Дела бывают разные, простые и сложные, верные и безнадежные. Если шансы на успех малы – я скажу Вам об этом в самом начале. Я не буду давать Вам обещаний, которых не смогу выполнить."<img src="img/content/balance.svg" alt="Весы правосудия" width="100" height="100"></blockquote>
             <p>Кроме профессиональных умений и знаний адвокат должен обладать таким качеством как добросовестность. Если поручение принято – по делу должны быть приложены все силы, чтобы достичь положительного результата, помочь Доверителю.</p>
             <p>Если у вас возникнут вопросы, вы можете связаться со мной через форму обратной связи, по электронной почте или позвонить по телефону +7 (812) 962 19 51.</p>
             <p>Искренне надеюсь, что смогу помочь и Вам.</p>
@@ -118,9 +124,8 @@
           </div>
         </section>
         <section class="feedback">
-          <p class="feedback__name">Бесплатная онлайн консультация адвоката</p>
           <div class="feedback__wrap">
-            <h2 class="visually-hidden">Форма обратной связи</h2>
+            <h2 class="feedback__name">Бесплатная онлайн-консультация адвоката</h2>
             <form class="feedback__form" method="post" action="/s/mail_vac" enctype="multipart/form-data">
               <label class="feedback__label"><span class="feedback__note">Ваше имя:</span>
                 <input class="feedback__field" id="your-name" type="text" name="your-name" required="">
@@ -128,7 +133,7 @@
               <label class="feedback__label"><span class="feedback__note">Ваше телефон:</span>
                 <input class="feedback__field" id="phone" type="tel" name="phone" required="">
               </label>
-              <label class="feedback__label"><span class="feedback__note">Ваше email:</span>
+              <label class="feedback__label"><span class="feedback__note">Ваше email:s</span>
                 <input class="feedback__field" id="email" type="email" name="email" required="">
               </label>
               <label class="feedback__label feedback__label--textarea"><span class="feedback__note">Текст письма:</span>
@@ -139,39 +144,37 @@
           </div>
         </section>
         <section class="certificates">
-          <h2 class="visiually-hidden">Фото сертификатов</h2>
-          <p class="certificates__name">Свидетельство и cертификаты</p>
+          <h2 class="certificates__name">Свидетельство и cертификаты</h2>
           <ul class="certificates__list">
-            <li class="certificates__item"><a class="certificates__link" href="#">
-                <picture class="certificates__thumb"><img src="img/content/certificate_1.jpg" alt="Грамота"></picture></a></li>
-            <li class="certificates__item"><a class="certificates__link" href="#">
-                <picture class="certificates__thumb"><img src="img/content/certificate_1.jpg" alt="Грамота"></picture></a></li>
-            <li class="certificates__item"><a class="certificates__link" href="#">
-                <picture class="certificates__thumb"><img src="img/content/certificate_1.jpg" alt="Грамота"></picture></a></li>
-            <li class="certificates__item"><a class="certificates__link" href="#">
-                <picture class="certificates__thumb"><img src="img/content/certificate_1.jpg" alt="Грамота"></picture></a></li>
+            <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото">
+                <picture class="certificates__thumb"><img src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></picture></a></li>
+            <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_2.jpg" aria-label="Увеличить фото">
+                <picture class="certificates__thumb"><img src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования" width="120" height="174"></picture></a></li>
+            <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото">
+                <picture class="certificates__thumb"><img src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></picture></a></li>
           </ul>
         </section>
       </div>
     </main>
     <footer class="footer">
       <div class="footer__wrap">
-        <div class="lawyer">
-          <p class="lawyer__name">Адвокатский кабинет Якубов Рашад Киязович</p>
-          <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
-          <div class="lawyer__contacts">
-            <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ 'Графит' 2 этаж, офис 28</p>
-            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
-          </div>
+        <div class="lawyer lawyer--footer">
+          <p class="lawyer__name">Адвокатский кабинет Якубов Рашад Киязович
+            <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
+            <div class="lawyer__contacts">
+              <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</p>
+              <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
+            </div>
+          </p>
         </div>
         <p class="footer__copyright">Юридические услуги. © 2018 Все права защищены.</p>
         <ul class="social">
           <li class="social__item"><a class="social__link" href="https://instagram.com" aria-label="Мы в Instagram">
-              <picture class="social__icon"><img src="img/content/insta@1x.png" alt="Мы в Instagram"></picture></a></li>
+              <picture class="social__icon"><img src="img/content/insta.png" alt="Мы в Instagram"></picture></a></li>
           <li class="social__item"><a class="social__link" href="https://vk.com" aria-label="Мы во Вконтакте">
-              <picture class="social__icon"><img src="img/content/insta@1x.png" alt="Мы в Instagram"></picture></a></li>
+              <picture class="social__icon"><img src="img/content/vk.png" alt="Мы во Вконтакте"></picture></a></li>
           <li class="social__item"><a class="social__link" href="https://facebook.com" aria-label="Мы в Facebook">
-              <picture class="social__icon"><img src="img/content/insta@1x.png" alt="Мы в Instagram"></picture></a></li>
+              <picture class="social__icon"><img src="img/content/fb.png" alt="Мы в Facebook"></picture></a></li>
         </ul>
       </div>
     </footer>
