Add styles for header

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!-- SEO Задание тега Title-->
     <title>Главная
     </title>
@@ -13,14 +14,15 @@
   <body>
     <header class="header">
       <div class="header__wrap">
-        <div class="lawyer lawyer--undefined">
-          <p class="lawyer__name">Адвокатский кабинет Якубов Рашад Киязович
+        <div class="lawyer lawyer--header">
+          <div class="lawyer__info">
+            <p class="lawyer__name">Адвокатский кабинет<br/>Якубов Рашад Киязович</p>
             <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
-            <div class="lawyer__contacts">
-              <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</p>
-              <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
-            </div>
-          </p>
+          </div>
+          <div class="lawyer__contacts">
+            <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</p>
+            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
+          </div>
         </div>
       </div>
       <button class="nav-toggle" aria-label="Переключатель открыть/закрыть меню"><span></span></button>
@@ -31,9 +33,9 @@
           <li class="main-nav__item"><a class="main-nav__link" href="#">Практика</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
         </ul>
+        <blockquote class="main-nav__blockquote"><span>Знать свои права -&nbsp;</span><span>значит быть сильным!</span></blockquote>
+        <p class="main-nav__note">Первичная устная консультация - бесплатно!</p>
       </nav>
-      <blockquote class="header__blockquote">Знать свои права - значит быть сильным!</blockquote>
-      <p class="header__note">Первичная устная консультация - бесплатно!</p>
     </header>
     <main class="main-content">
       <div class="main-content__wrap">
@@ -159,13 +161,14 @@
     <footer class="footer">
       <div class="footer__wrap">
         <div class="lawyer lawyer--footer">
-          <p class="lawyer__name">Адвокатский кабинет Якубов Рашад Киязович
+          <div class="lawyer__info">
+            <p class="lawyer__name">Адвокатский кабинет<br/>Якубов Рашад Киязович</p>
             <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
-            <div class="lawyer__contacts">
-              <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</p>
-              <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
-            </div>
-          </p>
+          </div>
+          <div class="lawyer__contacts">
+            <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</p>
+            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
+          </div>
         </div>
         <p class="footer__copyright">Юридические услуги. © 2018 Все права защищены.</p>
         <ul class="social">
