Add grids for content

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,8 @@
             </div>
           </section>
         </aside>
-        <section class="cms-content">
+        <div class="main__col">
+          <section class="cms-content"></section>
           <div class="cms-content__wrapper">
             <h1>Адвокат Якубов Рашад Киязович</h1>
             <p>Вы находитесь на сайте адвоката Санкт-Петербурга. Я оказываю юридические услуги в Ленинградской области.</p>
@@ -124,8 +125,7 @@
             <p>Искренне надеюсь, что смогу помочь и Вам.</p>
             <p>Адвокат Якубов Рашад Киязович.</p>
           </div>
-        </section>
-        <section class="feedback">
+          <section class="feedback"></section>
           <div class="feedback__wrap">
             <h2 class="feedback__name">Бесплатная онлайн-консультация адвоката</h2>
             <form class="feedback__form" method="post" action="/s/mail_vac" enctype="multipart/form-data">
@@ -144,8 +144,7 @@
               <button class="feedback__send" type="submit">Отправить</button>
             </form>
           </div>
-        </section>
-        <section class="certificates">
+          <section class="certificates"></section>
           <h2 class="certificates__name">Свидетельство и cертификаты</h2>
           <ul class="certificates__list">
             <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото">
@@ -155,7 +154,7 @@
             <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото">
                 <picture class="certificates__thumb"><img src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></picture></a></li>
           </ul>
-        </section>
+        </div>
       </div>
     </main>
     <footer class="footer">
