Add styles for sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- SEO Задание тега Title-->
-    <title>Главная
-    </title>
+    <title>Адвокатский кабинет Якубов Рашад Киязович</title>
+    <!-- SEO Задание тега Description-->
+    <meta name="description" content="Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587">
   </head>
   <body>
     <header class="header">
@@ -41,55 +42,52 @@
       <div class="main-content__wrap">
         <aside class="sidebar">
           <nav class="service-menu">
-            <div class="service-menu__wrapper">
-              <div class="service-menu__name">Услуги
-                <ul class="service-menu__list">
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Недвижимость</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Земельные споры</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Выселение</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Защита прав дольщиков</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Признание прав собственности</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Корпоративные споры</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Семейные дела</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Развод и раздел имущества супругов</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Наследство</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Восстановление срока принятия наследства</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Оспаривание завещания</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Защита интеллектуальной собственности</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Авторские права наследников</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Нарушение авторских прав</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Трудовые споры</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Споры со страховыми</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Административные дела</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Банкротство</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Гражданские дела</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Защита прав потребителей</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Признание договора недействительным</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Составление искового заявления</a></li>
-                  <li class="service-menu__item"><a class="service-menu__link" href="#">Юридическая консультация</a></li>
-                </ul>
-              </div>
-            </div>
+            <div class="service-menu__name">Услуги</div>
+            <ul class="service-menu__list">
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Недвижимость</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Земельные споры</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Выселение</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Защита прав дольщиков</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Признание прав собственности</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Корпоративные споры</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Семейные дела</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Развод и раздел имущества супругов</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Наследство</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Восстановление срока принятия наследства</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Оспаривание завещания</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Защита интеллектуальной собственности</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Авторские права наследников</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Нарушение авторских прав</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Трудовые споры</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Споры со страховыми</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Административные дела</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Банкротство</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Гражданские дела</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Защита прав потребителей</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Признание договора недействительным</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Составление искового заявления</a></li>
+              <li class="service-menu__item"><a class="service-menu__link" href="#">Юридическая консультация</a></li>
+            </ul>
           </nav>
-          <section class="latest-articles">
+          <div class="latest-articles">
             <div class="latest-articles__wrapper">
-              <div class="latest-article__name">Статьи</div>
-              <ul class="latest-article__list">
-                <li class="latest-article__item">
-                  <p class="latest-article__name-article">Что изменилось в правилах регистрации недвижимости</p>
-                  <p class="latest-article__annotation-article">С 01.01.2017 в сфере недвижимости действует новый закон 'О государственной регистрации недвижимости'</p><a class="latest-article__link" href="#">Подробнее</a>
+              <div class="latest-articles__name">Статьи</div>
+              <ul class="latest-articles__list">
+                <li class="latest-articles__item">
+                  <p class="latest-articles__name-article">Что изменилось в правилах регистрации недвижимости</p>
+                  <p class="latest-articles__annotation-article">С 01.01.2017 в сфере недвижимости действует новый закон 'О государственной регистрации недвижимости'</p><a class="latest-articles__link-article" href="#">Подробнее</a>
                 </li>
-                <li class="latest-article__item">
-                  <p class="latest-article__name-article">Что изменилось в правилах регистрации недвижимости</p>
-                  <p class="latest-article__annotation-article">С 01.01.2017 в сфере недвижимости действует новый закон 'О государственной регистрации недвижимости'</p><a class="latest-article__link" href="#">Подробнее</a>
+                <li class="latest-articles__item">
+                  <p class="latest-articles__name-article">Что изменилось в правилах регистрации недвижимости</p>
+                  <p class="latest-articles__annotation-article">С 01.01.2017 в сфере недвижимости действует новый закон 'О государственной регистрации недвижимости'</p><a class="latest-articles__link-article" href="#">Подробнее</a>
                 </li>
-                <li class="latest-article__item">
-                  <p class="latest-article__name-article">Что изменилось в правилах регистрации недвижимости</p>
-                  <p class="latest-article__annotation-article">С 01.01.2017 в сфере недвижимости действует новый закон 'О государственной регистрации недвижимости'</p><a class="latest-article__link" href="#">Подробнее</a>
+                <li class="latest-articles__item">
+                  <p class="latest-articles__name-article">Что изменилось в правилах регистрации недвижимости</p>
+                  <p class="latest-articles__annotation-article">С 01.01.2017 в сфере недвижимости действует новый закон 'О государственной регистрации недвижимости'</p><a class="latest-articles__link-article" href="#">Подробнее</a>
                 </li>
-              </ul><a class="latest-article__link" href="#">Все статьи</a>
+              </ul><a class="latest-articles__link" href="#">Все статьи »</a>
             </div>
-          </section>
+          </div>
         </aside>
         <div class="main__col">
           <section class="cms-content"></section>
