Add styles for cms-content block

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
             <p>Отношения адвоката и его клиента особые, недаром последний называется Доверителем. Эти отношения носят доверительный характер. Человек, обратившийся за помощью к адвокату, должен ему доверять.</p>
             <p>Условиями такого доверия, как сказано в Кодексе профессиональной этики адвоката, являются профессиональная независимость адвоката, убежденность доверителя в порядочности, честности и добросовестности адвоката.</p>
             <p>Оказание юридической помощи, представление интересов в суде должны быть не только профессией, но и любимым делом. Только в этом случае возможны профессиональный рост и развитие, подлинная компетентность.</p>
-            <blockquote>"Дела бывают разные, простые и сложные, верные и безнадежные. Если шансы на успех малы – я скажу Вам об этом в самом начале. Я не буду давать Вам обещаний, которых не смогу выполнить."<img src="img/content/balance.svg" alt="Весы правосудия" width="100" height="100"></blockquote>
+            <blockquote>"Дела бывают разные, простые и сложные, верные и безнадежные. Если шансы на успех малы – я скажу Вам об этом в самом начале. Я не буду давать Вам обещаний, которых не смогу выполнить."</blockquote>
             <p>Кроме профессиональных умений и знаний адвокат должен обладать таким качеством как добросовестность. Если поручение принято – по делу должны быть приложены все силы, чтобы достичь положительного результата, помочь Доверителю.</p>
             <p>Если у вас возникнут вопросы, вы можете связаться со мной через форму обратной связи, по электронной почте или позвонить по телефону +7 (812) 962 19 51.</p>
             <p>Искренне надеюсь, что смогу помочь и Вам.</p>
