--- a/public/index.html
+++ b/public/index.html
@@ -90,68 +90,77 @@
           </div>
         </aside>
         <div class="main__col">
-          <section class="cms-content"></section>
-          <div class="cms-content__wrapper">
-            <h1>Адвокат Якубов Рашад Киязович</h1>
-            <p>Вы находитесь на сайте адвоката Санкт-Петербурга. Я оказываю юридические услуги в Ленинградской области.</p>
-            <p>Области моих профессионалsьных интересов – недвижимость, корпоративное право, право интеллектуальной собственности, судебные споры в гражданско-правовой сфере, осуществляю работу по уголовным делам.</p>
-            <p>Также я работаю в сфере договорного права: разрабатываю проекты договоров, осуществляю юридическое сопровождение сделок, участвую в согласовании договорных условий, даю заключения по договорам.</p>
-            <p>По роду деятельности я регулярно участвую в судебных заседаниях районных судов города Санкт-Петербург, Санкт-Петербургском городском и областном судах, Арбитражном суде города Санкт-Петербург, Арбитражном суде Ленинградской области, 9 и 10 арбитражных апелляционных судах, арбитражном суде.</p>
-            <h2>Юридическая помощь</h2>
-            <section class="advantages">
-              <h3 class="visually-hidden">Преимущества</h3>
-              <ul class="advantages__list">
-                <li class="advantages__item"><img class="advantages__icon" src="img/content/legal-hammer.svg" alt="Судейский молоток" width="60" height="60">Участие в судах
-                </li>
-                <li class="advantages__item"><img class="advantages__icon" src="img/content/wallet-filled-money-tool.svg" alt="Кошелек" width="62" height="60">Разумные цены
-                </li>
-                <li class="advantages__item"><img class="advantages__icon" src="img/content/clock.svg" alt="Часы" width="60" height="60">Пунктуальность
-                </li>
-              </ul>
-            </section>
-            <p>Каждый человек имеет интересы, права, которые необходимо защищать. В ряде случаев для этого необходима помощь специалиста в области права, адвоката.</p>
-            <p>Особенно важно привлечь к участию в деле юриста, когда цена ошибки очень высока.</p>
-            <p>Чтобы защитить свои права, нужно как минимум знать закон. Но чтобы суд принял нужное Вам решение, этого знания мало. Нужно знать, как суд понимает закон, какие обстоятельства для него важны при разрешении спора.</p>
-            <p>Судебная практика меняется и часто бывает противоречива. Но, чтобы обращение в суд было успешным, ее нужно учитывать. Судебный юрист не только знает законы, но и знает, как их понимает суд. Такое понимание нарабатывается опытом постоянной работы в судах, изучением судебной практики.</p>
-            <h2>Принципы работы</h2>
-            <p>Отношения адвоката и его клиента особые, недаром последний называется Доверителем. Эти отношения носят доверительный характер. Человек, обратившийся за помощью к адвокату, должен ему доверять.</p>
-            <p>Условиями такого доверия, как сказано в Кодексе профессиональной этики адвоката, являются профессиональная независимость адвоката, убежденность доверителя в порядочности, честности и добросовестности адвоката.</p>
-            <p>Оказание юридической помощи, представление интересов в суде должны быть не только профессией, но и любимым делом. Только в этом случае возможны профессиональный рост и развитие, подлинная компетентность.</p>
-            <blockquote>"Дела бывают разные, простые и сложные, верные и безнадежные. Если шансы на успех малы – я скажу Вам об этом в самом начале. Я не буду давать Вам обещаний, которых не смогу выполнить."</blockquote>
-            <p>Кроме профессиональных умений и знаний адвокат должен обладать таким качеством как добросовестность. Если поручение принято – по делу должны быть приложены все силы, чтобы достичь положительного результата, помочь Доверителю.</p>
-            <p>Если у вас возникнут вопросы, вы можете связаться со мной через форму обратной связи, по электронной почте или позвонить по телефону +7 (812) 962 19 51.</p>
-            <p>Искренне надеюсь, что смогу помочь и Вам.</p>
-            <p>Адвокат Якубов Рашад Киязович.</p>
-          </div>
-          <section class="feedback"></section>
-          <div class="feedback__wrap">
-            <h2 class="feedback__name">Бесплатная онлайн-консультация адвоката</h2>
-            <form class="feedback__form" method="post" action="/s/mail_vac" enctype="multipart/form-data">
-              <label class="feedback__label"><span class="feedback__note">Ваше имя:</span>
-                <input class="feedback__field" id="your-name" type="text" name="your-name" required="">
-              </label>
-              <label class="feedback__label"><span class="feedback__note">Ваше телефон:</span>
-                <input class="feedback__field" id="phone" type="tel" name="phone" required="">
-              </label>
-              <label class="feedback__label"><span class="feedback__note">Ваше email:s</span>
-                <input class="feedback__field" id="email" type="email" name="email" required="">
-              </label>
-              <label class="feedback__label feedback__label--textarea"><span class="feedback__note">Текст письма:</span>
-                <textarea class="feedback__textarea" id="message" name="message"></textarea>
-              </label>
-              <button class="feedback__send" type="submit">Отправить</button>
-            </form>
-          </div>
-          <section class="certificates"></section>
-          <h2 class="certificates__name">Свидетельство и cертификаты</h2>
-          <ul class="certificates__list">
-            <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото">
-                <picture class="certificates__thumb"><img src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></picture></a></li>
-            <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_2.jpg" aria-label="Увеличить фото">
-                <picture class="certificates__thumb"><img src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования" width="120" height="174"></picture></a></li>
-            <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото">
-                <picture class="certificates__thumb"><img src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></picture></a></li>
-          </ul>
+          <section class="cms-content">
+            <div class="cms-content__wrapper">
+              <h1>Адвокат Якубов Рашад Киязович</h1>
+              <p>Вы находитесь на сайте адвоката Санкт-Петербурга. Я оказываю юридические услуги в Ленинградской области.</p>
+              <p>Области моих профессионалsьных интересов – недвижимость, корпоративное право, право интеллектуальной собственности, судебные споры в гражданско-правовой сфере, осуществляю работу по уголовным делам.</p>
+              <p>Также я работаю в сфере договорного права: разрабатываю проекты договоров, осуществляю юридическое сопровождение сделок, участвую в согласовании договорных условий, даю заключения по договорам.</p>
+              <p>По роду деятельности я регулярно участвую в судебных заседаниях районных судов города Санкт-Петербург, Санкт-Петербургском городском и областном судах, Арбитражном суде города Санкт-Петербург, Арбитражном суде Ленинградской области, 9 и 10 арбитражных апелляционных судах, арбитражном суде.</p>
+              <h2>Юридическая помощь</h2>
+              <section class="advantages">
+                <h3 class="visually-hidden">Преимущества</h3>
+                <ul class="advantages__list">
+                  <li class="advantages__item"><img class="advantages__icon" src="img/content/legal-hammer.svg" alt="Судейский молоток" width="60" height="60">Участие в судах
+                  </li>
+                  <li class="advantages__item"><img class="advantages__icon" src="img/content/wallet-filled-money-tool.svg" alt="Кошелек" width="62" height="60">Разумные цены
+                  </li>
+                  <li class="advantages__item"><img class="advantages__icon" src="img/content/clock.svg" alt="Часы" width="60" height="60">Пунктуальность
+                  </li>
+                </ul>
+              </section>
+              <p>Каждый человек имеет интересы, права, которые необходимо защищать. В ряде случаев для этого необходима помощь специалиста в области права, адвоката.</p>
+              <p>Особенно важно привлечь к участию в деле юриста, когда цена ошибки очень высока.</p>
+              <p>Чтобы защитить свои права, нужно как минимум знать закон. Но чтобы суд принял нужное Вам решение, этого знания мало. Нужно знать, как суд понимает закон, какие обстоятельства для него важны при разрешении спора.</p>
+              <p>Судебная практика меняется и часто бывает противоречива. Но, чтобы обращение в суд было успешным, ее нужно учитывать. Судебный юрист не только знает законы, но и знает, как их понимает суд. Такое понимание нарабатывается опытом постоянной работы в судах, изучением судебной практики.</p>
+              <h2>Принципы работы</h2>
+              <p>Отношения адвоката и его клиента особые, недаром последний называется Доверителем. Эти отношения носят доверительный характер. Человек, обратившийся за помощью к адвокату, должен ему доверять.</p>
+              <p>Условиями такого доверия, как сказано в Кодексе профессиональной этики адвоката, являются профессиональная независимость адвоката, убежденность доверителя в порядочности, честности и добросовестности адвоката.</p>
+              <p>Оказание юридической помощи, представление интересов в суде должны быть не только профессией, но и любимым делом. Только в этом случае возможны профессиональный рост и развитие, подлинная компетентность.</p>
+              <blockquote>"Дела бывают разные, простые и сложные, верные и безнадежные. Если шансы на успех малы – я скажу Вам об этом в самом начале. Я не буду давать Вам обещаний, которых не смогу выполнить."</blockquote>
+              <p>Кроме профессиональных умений и знаний адвокат должен обладать таким качеством как добросовестность. Если поручение принято – по делу должны быть приложены все силы, чтобы достичь положительного результата, помочь Доверителю.</p>
+              <p>Если у вас возникнут вопросы, вы можете связаться со мной через форму обратной связи, по электронной почте или позвонить по телефону +7 (812) 962 19 51.</p>
+              <p>Искренне надеюсь, что смогу помочь и Вам.</p>
+              <p>Адвокат Якубов Рашад Киязович.</p>
+            </div>
+          </section>
+          <section class="feedback">
+            <div class="feedback__wrap">
+              <h2 class="feedback__name">Бесплатная онлайн-консультация адвоката</h2>
+              <form class="feedback__form" method="post" action="/s/mail_vac" enctype="multipart/form-data">
+                <div class="feedback__layout">
+                  <div class="feedback__field">
+                    <label class="feedback__label" for="your name">Ваше имя*:</label>
+                    <input class="feedback__input" id="your-name" type="text" name="your-name" pattern="[[A-Za-zА-Яа-яЁё]{2,}" title="Введите, пожалуйста, Ваше имя (не менее 2 символов)" placeholder="Например, Иван" required>
+                  </div>
+                  <div class="feedback__field">
+                    <label class="feedback__label" for="phone">Ваше телефон*:</label>
+                    <input class="feedback__input" id="phone" type="tel" name="phone" pattern="7[0-9]{10}" title="Введите, пожалуйста, Ваш номер телефона" placeholder="7XXXXXXXXX" required>
+                  </div>
+                  <div class="feedback__field">
+                    <label class="feedback__label" for="email">Ваше email*:</label>
+                    <input class="feedback__input" id="email" type="email" name="email" pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,10})" title="Введите, пожалуйста, Ваш адрес электронной почты" placeholder="ivan@mail.ru" required>
+                  </div>
+                </div>
+                <div class="feedback__field feedback__field--textarea">
+                  <label class="feedback__label" for="message">Текст письма:</label>
+                  <textarea class="feedback__textarea" id="message" name="message" title="Введите текст (не менее 25 символов)" minlength="25" placeholder="Тексто должен содержать минимум 25 символов"></textarea>
+                </div>
+                <button class="feedback__send" type="submit">Отправить</button>
+              </form>
+            </div>
+          </section>
+          <section class="certificates">
+            <h2 class="certificates__name">Свидетельство и cертификаты</h2>
+            <ul class="certificates__list">
+              <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото">
+                  <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></a></li>
+              <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_2.jpg" aria-label="Увеличить фото">
+                  <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования" width="120" height="174"></a></li>
+              <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото">
+                  <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></a></li>
+            </ul>
+          </section>
         </div>
       </div>
     </main>
