Add styles for certificates

--- a/public/index.html
+++ b/public/index.html
@@ -151,15 +151,17 @@
             </div>
           </section>
           <section class="certificates">
-            <h2 class="certificates__name">Свидетельство и cертификаты</h2>
-            <ul class="certificates__list">
-              <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото">
-                  <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></a></li>
-              <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_2.jpg" aria-label="Увеличить фото">
-                  <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования" width="120" height="174"></a></li>
-              <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото">
-                  <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></a></li>
-            </ul>
+            <div class="certificates__wrap">
+              <h2 class="certificates__name">Свидетельство и cертификаты</h2><a class="certificates__all-link" href="#" aria-label="Посмотреть все сертификаты">Все сертификаты »</a>
+              <ul class="certificates__list">
+                <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото">
+                    <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></a></li>
+                <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_2.jpg" aria-label="Увеличить фото">
+                    <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования" width="120" height="174"></a></li>
+                <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото">
+                    <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></a></li>
+              </ul>
+            </div>
           </section>
         </div>
       </div>
