--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
             <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
           </div>
           <div class="lawyer__contacts">
-            <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</p>
-            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
+            <p class="lawyer__adress"><img class="lawyer__icon" src="../img/content/icon-adress-navy.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</span></p>
+            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51"><img class="lawyer__icon" src="../img/content/icon-phone-navy.png" alt="Иконка телефона" width="32" height="32"/><span>+7 (812) 962 19 51</span></a><a class="lawyer__email" href="mailto:9621951@mail.ru"><img class="lawyer__icon" src="../img/content/icon-mail-navy.png" alt="Иконка email" width="32" height="32"/><span>9621951@mail.ru</span></a></p>
           </div>
         </div>
       </div>
@@ -174,19 +174,21 @@
             <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
           </div>
           <div class="lawyer__contacts">
-            <p class="lawyer__adress">Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</p>
-            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51">+7 (812) 962 19 51</a><a class="lawyer__email" href="mailto:9621951@mail.ru">9621951@mail.ru</a></p>
+            <p class="lawyer__adress"><img class="lawyer__icon" src="../img/content/icon-adress-white.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</span></p>
+            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51"><img class="lawyer__icon" src="../img/content/icon-phone-white.png" alt="Иконка телефона" width="32" height="32"/><span>+7 (812) 962 19 51</span></a><a class="lawyer__email" href="mailto:9621951@mail.ru"><img class="lawyer__icon" src="../img/content/icon-mail-white.png" alt="Иконка email" width="32" height="32"/><span>9621951@mail.ru</span></a></p>
           </div>
         </div>
-        <p class="footer__copyright">Юридические услуги. © 2018 Все права защищены.</p>
-        <ul class="social">
-          <li class="social__item"><a class="social__link" href="https://instagram.com" aria-label="Мы в Instagram">
-              <picture class="social__icon"><img src="img/content/insta.png" alt="Мы в Instagram"></picture></a></li>
-          <li class="social__item"><a class="social__link" href="https://vk.com" aria-label="Мы во Вконтакте">
-              <picture class="social__icon"><img src="img/content/vk.png" alt="Мы во Вконтакте"></picture></a></li>
-          <li class="social__item"><a class="social__link" href="https://facebook.com" aria-label="Мы в Facebook">
-              <picture class="social__icon"><img src="img/content/fb.png" alt="Мы в Facebook"></picture></a></li>
-        </ul>
+        <div class="footer__bottom">
+          <p class="footer__copyright">Юридические услуги. © 2018 Все права защищены.</p>
+          <ul class="social">
+            <li class="social__item"><a class="social__link" href="https://instagram.com" aria-label="Мы в Instagram">
+                <picture class="social__icon"><img src="img/content/insta.png" alt="Мы в Instagram"></picture></a></li>
+            <li class="social__item"><a class="social__link" href="https://vk.com" aria-label="Мы во Вконтакте">
+                <picture class="social__icon"><img src="img/content/vk.png" alt="Мы во Вконтакте"></picture></a></li>
+            <li class="social__item"><a class="social__link" href="https://facebook.com" aria-label="Мы в Facebook">
+                <picture class="social__icon"><img src="img/content/fb.png" alt="Мы в Facebook"></picture></a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
