Validation and PP

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
           </div>
           <div class="lawyer__contacts">
-            <p class="lawyer__adress"><img class="lawyer__icon" src="../img/content/icon-adress-navy.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</span></p>
+            <p class="lawyer__adress"><img class="lawyer__icon" src="../img/content/icon-adress-navy.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д. 48 БЦ "Графит" 2 этаж, офис 28</span></p>
             <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51"><img class="lawyer__icon" src="../img/content/icon-phone-navy.png" alt="Иконка телефона" width="32" height="32"/><span>+7 (812) 962 19 51</span></a><a class="lawyer__email" href="mailto:9621951@mail.ru"><img class="lawyer__icon" src="../img/content/icon-mail-navy.png" alt="Иконка email" width="32" height="32"/><span>9621951@mail.ru</span></a></p>
           </div>
         </div>
@@ -91,8 +91,8 @@
         </aside>
         <div class="main__col">
           <section class="cms-content">
+            <h1>Адвокат Якубов Рашад Киязович</h1>
             <div class="cms-content__wrapper">
-              <h1>Адвокат Якубов Рашад Киязович</h1>
               <p>Вы находитесь на сайте адвоката Санкт-Петербурга. Я оказываю юридические услуги в Ленинградской области.</p>
               <p>Области моих профессионалsьных интересов – недвижимость, корпоративное право, право интеллектуальной собственности, судебные споры в гражданско-правовой сфере, осуществляю работу по уголовным делам.</p>
               <p>Также я работаю в сфере договорного права: разрабатываю проекты договоров, осуществляю юридическое сопровождение сделок, участвую в согласовании договорных условий, даю заключения по договорам.</p>
@@ -112,7 +112,6 @@
               <p>Каждый человек имеет интересы, права, которые необходимо защищать. В ряде случаев для этого необходима помощь специалиста в области права, адвоката.</p>
               <p>Особенно важно привлечь к участию в деле юриста, когда цена ошибки очень высока.</p>
               <p>Чтобы защитить свои права, нужно как минимум знать закон. Но чтобы суд принял нужное Вам решение, этого знания мало. Нужно знать, как суд понимает закон, какие обстоятельства для него важны при разрешении спора.</p>
-              <p>Судебная практика меняется и часто бывает противоречива. Но, чтобы обращение в суд было успешным, ее нужно учитывать. Судебный юрист не только знает законы, но и знает, как их понимает суд. Такое понимание нарабатывается опытом постоянной работы в судах, изучением судебной практики.</p>
               <h2>Принципы работы</h2>
               <p>Отношения адвоката и его клиента особые, недаром последний называется Доверителем. Эти отношения носят доверительный характер. Человек, обратившийся за помощью к адвокату, должен ему доверять.</p>
               <p>Условиями такого доверия, как сказано в Кодексе профессиональной этики адвоката, являются профессиональная независимость адвоката, убежденность доверителя в порядочности, честности и добросовестности адвоката.</p>
@@ -125,12 +124,12 @@
             </div>
           </section>
           <section class="feedback">
+            <h2 class="feedback__name">Бесплатная онлайн-консультация адвоката</h2>
             <div class="feedback__wrap">
-              <h2 class="feedback__name">Бесплатная онлайн-консультация адвоката</h2>
               <form class="feedback__form" method="post" action="/s/mail_vac" enctype="multipart/form-data">
                 <div class="feedback__layout">
                   <div class="feedback__field">
-                    <label class="feedback__label" for="your name">Ваше имя*:</label>
+                    <label class="feedback__label" for="your-name">Ваше имя*:</label>
                     <input class="feedback__input" id="your-name" type="text" name="your-name" pattern="[[A-Za-zА-Яа-яЁё]{2,}" title="Введите, пожалуйста, Ваше имя (не менее 2 символов)" placeholder="Например, Иван" required>
                   </div>
                   <div class="feedback__field">
@@ -155,11 +154,11 @@
               <h2 class="certificates__name">Свидетельство и cертификаты</h2><a class="certificates__all-link" href="#" aria-label="Посмотреть все сертификаты">Все сертификаты »</a>
               <ul class="certificates__list">
                 <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото">
-                    <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></a></li>
+                    <picture class="certificates__thumb"><img src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></picture></a></li>
                 <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_2.jpg" aria-label="Увеличить фото">
-                    <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования" width="120" height="174"></a></li>
+                    <picture class="certificates__thumb"><img src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования" width="120" height="174"></picture></a></li>
                 <li class="certificates__item"><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото">
-                    <picture class="certificates__thumb"></picture><img src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></a></li>
+                    <picture class="certificates__thumb"><img src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации" width="120" height="174"></picture></a></li>
               </ul>
             </div>
           </section>
@@ -174,7 +173,7 @@
             <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
           </div>
           <div class="lawyer__contacts">
-            <p class="lawyer__adress"><img class="lawyer__icon" src="../img/content/icon-adress-white.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28</span></p>
+            <p class="lawyer__adress"><img class="lawyer__icon" src="../img/content/icon-adress-white.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д. 48 БЦ "Графит" 2 этаж, офис 28</span></p>
             <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51"><img class="lawyer__icon" src="../img/content/icon-phone-white.png" alt="Иконка телефона" width="32" height="32"/><span>+7 (812) 962 19 51</span></a><a class="lawyer__email" href="mailto:9621951@mail.ru"><img class="lawyer__icon" src="../img/content/icon-mail-white.png" alt="Иконка email" width="32" height="32"/><span>9621951@mail.ru</span></a></p>
           </div>
         </div>
