--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
             <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
           </div>
           <div class="lawyer__contacts">
-            <p class="lawyer__adress"><img class="lawyer__icon" src="../img/content/icon-adress-navy.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д. 48 БЦ "Графит" 2 этаж, офис 28</span></p>
-            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51"><img class="lawyer__icon" src="../img/content/icon-phone-navy.png" alt="Иконка телефона" width="32" height="32"/><span>+7 (812) 962 19 51</span></a><a class="lawyer__email" href="mailto:9621951@mail.ru"><img class="lawyer__icon" src="../img/content/icon-mail-navy.png" alt="Иконка email" width="32" height="32"/><span>9621951@mail.ru</span></a></p>
+            <p class="lawyer__adress"><img class="lawyer__icon" src="img/content/icon-adress-navy.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д. 48 БЦ "Графит" 2 этаж, офис 28</span></p>
+            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51"><img class="lawyer__icon" src="img/content/icon-phone-navy.png" alt="Иконка телефона" width="32" height="32"/><span>+7 (812) 962 19 51</span></a><a class="lawyer__email" href="mailto:9621951@mail.ru"><img class="lawyer__icon" src="img/content/icon-mail-navy.png" alt="Иконка email" width="32" height="32"/><span>9621951@mail.ru</span></a></p>
           </div>
         </div>
       </div>
-      <button class="nav-toggle" type="button" aria-label="Переключатель открыть/закрыть меню"><span></span></button>
+      <button class="nav-toggle nav-toggle--no-js" type="button" aria-label="Переключатель открыть/закрыть меню"><span></span></button>
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item"><a class="main-nav__link" href="#">Главная</a></li>
@@ -39,10 +39,10 @@
       </nav>
     </header>
     <main class="main-content">
-      <div class="main-content__wrap main-content__wrap--show-submenu">
-        <aside class="sidebar">
+      <div class="main-content__wrap">
+        <aside class="sidebar sidebar--show">
           <nav class="service-menu">
-            <button class="service-menu__name" href="#" disabled="disabled">Услуги</button>
+            <button class="service-menu__name service-menu--no-js" href="#" disabled="disabled">Услуги</button>
             <ul class="service-menu__list">
               <li class="service-menu__item"><a class="service-menu__link" href="#">Недвижимость</a></li>
               <li class="service-menu__item"><a class="service-menu__link" href="#">Земельные споры</a></li>
@@ -172,8 +172,8 @@
             <p class="lawyer__description">Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587</p>
           </div>
           <div class="lawyer__contacts">
-            <p class="lawyer__adress"><img class="lawyer__icon" src="../img/content/icon-adress-white.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д. 48 БЦ "Графит" 2 этаж, офис 28</span></p>
-            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51"><img class="lawyer__icon" src="../img/content/icon-phone-white.png" alt="Иконка телефона" width="32" height="32"/><span>+7 (812) 962 19 51</span></a><a class="lawyer__email" href="mailto:9621951@mail.ru"><img class="lawyer__icon" src="../img/content/icon-mail-white.png" alt="Иконка email" width="32" height="32"/><span>9621951@mail.ru</span></a></p>
+            <p class="lawyer__adress"><img class="lawyer__icon" src="img/content/icon-adress-white.png" alt="Иконка геолокации" width="32" height="32"/><span>Санкт-Петербург, г. Пушкин ул. Оранжерейная д. 48 БЦ "Графит" 2 этаж, офис 28</span></p>
+            <p class="lawyer__connections"><a class="lawyer__phone" href="tel:+7-(812)-962-19-51"><img class="lawyer__icon" src="img/content/icon-phone-white.png" alt="Иконка телефона" width="32" height="32"/><span>+7 (812) 962 19 51</span></a><a class="lawyer__email" href="mailto:9621951@mail.ru"><img class="lawyer__icon" src="img/content/icon-mail-white.png" alt="Иконка email" width="32" height="32"/><span>9621951@mail.ru</span></a></p>
           </div>
         </div>
         <div class="footer__bottom">
