Ad scripts for mobile menu

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
       </div>
-      <button class="nav-toggle nav-toggle--no-js" type="button" aria-label="Переключатель открыть/закрыть меню"><span></span></button>
+      <button class="nav-toggle nav-toggle--nojs" type="button" aria-label="Переключатель открыть/закрыть меню"><span></span></button>
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item"><a class="main-nav__link" href="#">Главная</a></li>
@@ -40,9 +40,9 @@
     </header>
     <main class="main-content">
       <div class="main-content__wrap">
-        <aside class="sidebar sidebar--show">
+        <aside class="sidebar">
           <nav class="service-menu">
-            <button class="service-menu__name service-menu--no-js" href="#" disabled="disabled">Услуги</button>
+            <button class="service-menu__name service-menu__name--nojs" href="#" disabled="disabled">Услуги</button>
             <ul class="service-menu__list">
               <li class="service-menu__item"><a class="service-menu__link" href="#">Недвижимость</a></li>
               <li class="service-menu__item"><a class="service-menu__link" href="#">Земельные споры</a></li>
@@ -189,5 +189,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
